# WebEstateApp

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 356d250f1eab_init.py
src/: main.py
src/api/: api.py  auth.py  notes.py
src/core/: __init__.py  exceptions.py  security.py  settings.py
src/db/: __init__.py  asdict_mixin.py  declarative.py  query_mixin.py  session.py
src/models/: __init__.py  blacklist_token.py  note.py  user.py
src/schemas/: __init__.py  auth.py  note.py
